--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "understrap-child",
-  "version": "0.5.5",
+  "name": "understrap-laudate",
+  "version": "0.9.0",
   "description": "Basic Child Theme for UnderStrap Theme Framework: https://github.com/holger1411/understrap",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/holger1411/understrap-child.git"
+    "url": "https://github.com/claudinec/understrap-laudate.git"
   },
   "keywords": [
     "wordpress",
@@ -17,12 +17,12 @@
     "bootstrap",
     "underscores"
   ],
-  "author": "Holger Koenemann",
+  "author": "Holger Koenemann modified by Claudine Chionh",
   "license": "GPL-2.0",
   "bugs": {
-    "url": "https://github.com/holger1411/understrap-child/issues"
+    "url": "https://github.com/claudinec/understrap-laudate/issues"
   },
-  "homepage": "https://understrap.com",
+  "homepage": "https://github.com/claudinec/understrap-laudate",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.3",
